--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@types/express": "^5.0.6",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^25.0.9",
+		"@types/swagger-jsdoc": "^6.0.4",
+		"@types/swagger-ui-express": "^4.1.8",
 		"prisma": "^7.3.0",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
@@ -28,6 +30,8 @@
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
 		"jsonwebtoken": "^9.0.3",
-		"nodemon": "^3.1.11"
+		"nodemon": "^3.1.11",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1"
 	}
 }
