feat: add path aliases + feat: add swagger docs on userController

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./*"],
+			"@lib/*": ["api/lib/*"],
+			"@controllers/*": ["api/controllers/*"],
+			"@middleware/*": ["api/middleware/*"],
+			"@routes/*": ["api/routes/*"]
+		},
 		"module": "ESNext",
 		"moduleResolution": "bundler",
 		"target": "ES2023",
